--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jayfate/path",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -41,7 +41,9 @@
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-terser": "^7.0.2",
     "ts-node": "^10.9.1",
-    "tslib": "^2.4.0",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "tslib": "^2.4.0"
   }
 }
