--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jayfate/path",
-  "version": "0.0.11",
-  "description": "",
+  "version": "0.0.12",
+  "description": "The cross-platform `path` module. Uses `/` as the path separator for path parsing  and returned values on `Windows/MacOS/Linux`.",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "exports": {
