--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "access": "public"
   },
   "scripts": {
-    "test": "ts-node src/index.ts",
+    "test": "jest",
     "es": "tsc",
     "build": "rollup -c",
     "generate": "npm run clean && npm run es && npm run build",
@@ -34,12 +34,15 @@
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.4",
+    "@types/jest": "^29.2.0",
     "@types/node": "^18.7.23",
+    "jest-environment-jsdom": "^29.2.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.78.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-terser": "^7.0.2",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
