--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.4",
     "@types/jest": "^29.2.0",
+    "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.7.23",
     "jest-environment-jsdom": "^29.2.1",
     "rimraf": "^3.0.2",
@@ -47,6 +48,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "lodash-es": "^4.17.21",
     "tslib": "^2.4.0"
   }
 }
